[package]
name = "cw-auction"
description = "Auction NFT service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.0.0-beta"
cosmwasm-storage = "1.0.0-beta"
cw721 = "0.11.0"
cw721-base = { path = "../cw721-base", version = "0.11.0"}
cw-storage-plus = "0.12.0"
cw20 = "0.12.0"
cw20-atomic-swap = "0.11.1"
thiserror = { version = "1.0.23" }
schemars = "0.8.1"
serde = { version = "1.0.125", default-features = false, features = ["derive"] }


[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
